--- a/src/main/resources/templates/customer/updatecustomer.html
+++ b/src/main/resources/templates/customer/updatecustomer.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<!-- @AlexandraCaragata -->
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Title</title>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="formstyle.css"/>
 </head>
 <body>
 <nav>
