--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- @AlexandraCaragata -->
-<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <title>Nordic motorhomes</title>
     <link rel="stylesheet" href="homestyle.css"/>
