--- a/src/main/resources/templates/motorhomes/create_motorhome/new_motorhome_summary.html
+++ b/src/main/resources/templates/motorhomes/create_motorhome/new_motorhome_summary.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
     <title>new motorhome summary</title>
 </head>
 <body>
