--- a/src/main/resources/templates/motorhomes/update_motorhome.html
+++ b/src/main/resources/templates/motorhomes/update_motorhome.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Update motorhome</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="formstyle.css"/>
 </head>
 <body>
 <nav>
