--- a/src/main/resources/static/tablestyle.css
+++ b/src/main/resources/static/tablestyle.css
@@ -17,43 +17,7 @@ body{
     text-align: center;
 }
 
-ul {
-    list-style-type: none;
-    margin:0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
 
-li {
-    float: left;
-}
-
-li a {
-    font-size: 16px;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-#logout {
-    text-align: right;
-    margin-left: 40px;
-}
-
-li a:hover {
-    background-color: #111;
-}
-.logo{
-    margin-left:100px;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
 h1{
     margin-bottom:30px;
 }
@@ -63,6 +27,9 @@ table{
     margin-top:15px;
 }
 
+th{
+    background-color: peachpuff;
+}
 td,th{
     font-size: 12px;
     border: 1px solid #dddddd;
@@ -70,7 +37,7 @@ td,th{
     padding: 9px 10px 9px 10px;
 }
 tr:nth-child(even){
-    background-color: #dddddd;
+    background-color: #f2f2f2;
 }
 
 .button {
