--- a/src/main/resources/templates/customer/deletecustomer.html
+++ b/src/main/resources/templates/customer/deletecustomer.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
+<!-- @AlexandraCaragata -->
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Title</title>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="formstyle.css"/>
 </head>
 <body>
 <nav>
@@ -18,8 +21,8 @@
 
 <form action="/delete_customer" method="post">
     <input type="hidden" th:field="${customer.customerId}" />
-    <input type="submit" value="YES" class="btn btn-del w"/>
-    <a href="/customers" class="btn btn-create w">NO</a>
+    <input type="submit" value="YES" class="delete"/>
+    <input type="submit" value="NO" formmethod="get" formaction="/customer">
 </form>
 
 </body>
