--- a/src/main/resources/templates/customer/newcustomer.html
+++ b/src/main/resources/templates/customer/newcustomer.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
+<!-- @AlexandraCaragata -->
 <html lang="en">
 <head>
     <title>New Customer</title>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="formstyle.css"/>
 </head>
 <body>
+<nav>
+    <ul>
+        <li class="logo">Nordic Motorhomes</li>
+        <li><a href="/fleet">Fleet</a></li>
+        <li><a href="/reservations">Reservations</a></li>
+        <li><a href="/customers">Customers</a></li>
+        <li><a href="/repairs">Repairs</a></li>
+    </ul>
+</nav>
 <form action="/new_customer" method="post">
 
     <p>Full name:</p>
