--- a/src/main/resources/templates/motorhomes/create_motorhome/add_motorhome.html
+++ b/src/main/resources/templates/motorhomes/create_motorhome/add_motorhome.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="formstyle.css"/>
     <title>New Motorhome</title>
 </head>
 <body>
