--- a/src/main/resources/templates/motorhomes/fleet.html
+++ b/src/main/resources/templates/motorhomes/fleet.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
+<!-- @Alexandra Caragata -->
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Nordic Fleet</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="tablestyle.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+
 </head>
 <body>
 <nav>
