--- a/src/main/resources/templates/repairs/newrepair.html
+++ b/src/main/resources/templates/repairs/newrepair.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
+<!-- @AlexandraCaragata -->
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="formstyle.css"/>
+    <link rel="stylesheet" href="navbarstyle.css">
     <title>New Repair</title>
 </head>
 <body>
+<nav>
+    <ul>
+        <li class="logo">Nordic Motorhomes</li>
+        <li><a href="fleet">Fleet</a></li>
+        <li><a href="reservations">Reservations</a></li>
+        <li><a href="customers">Customers</a></li>
+        <li><a href="repairs">Repairs</a></li>
+    </ul>
+</nav>
 <form action="/new_repair" method="post">
 
     <p>Motorhome ID:</p>
