--- a/src/main/resources/templates/reservations/create/accessories.html
+++ b/src/main/resources/templates/reservations/create/accessories.html
@@ -2,7 +2,9 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <title>Reservations</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="tablestyle.css"/>
+    <link rel="stylesheet" href="formstyle.css"/>
 
 </head>
 <body>
