--- a/src/main/resources/templates/reservations/create/available_motorhomes.html
+++ b/src/main/resources/templates/reservations/create/available_motorhomes.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="tablestyle.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
     <title>Available Motorhomes</title>
 </head>
 <body>
@@ -24,6 +25,7 @@
             <th>Capacity</th>
             <th>Licence Plate</th>
             <th>Base Price</th>
+            <th></th>
         </tr>
         </thead>
 
