--- a/src/main/resources/templates/reservations/create/customer_data.html
+++ b/src/main/resources/templates/reservations/create/customer_data.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="formstyle.css">
     <title>Customer Data</title>
 </head>
 <body>
