Delete customers return bug fixed.

--- a/src/main/resources/templates/customer/deletecustomer.html
+++ b/src/main/resources/templates/customer/deletecustomer.html
@@ -22,7 +22,7 @@
 <form action="/delete_customer" method="post">
     <input type="hidden" th:field="${customer.customerId}" />
     <input type="submit" value="YES" class="delete"/>
-    <input type="submit" value="NO" formmethod="get" formaction="/customer">
+    <input type="submit" value="NO" formmethod="get" formaction="/customers">
 </form>
 
 </body>
