--- a/src/main/resources/static/formstyle.css
+++ b/src/main/resources/static/formstyle.css
@@ -13,7 +13,7 @@ h1,h2{
 p{
     font-size: 16px;
 }
-input[type=text], [type=date], select{
+input[type=text], [type=date], select, [type=number], [type=checkbox]{
     width: 80%;
     padding: 10px;
     font-size: 20px;
@@ -38,8 +38,9 @@ input[type=submit]:hover{
     background-color: black;
     color:white;
 }
-#motorhome{
+#motorhome, #reservation{
     font-size: 16px;
     margin-left:5%;
 
 }
+
