--- a/src/main/resources/templates/reservations/update.html
+++ b/src/main/resources/templates/reservations/update.html
@@ -2,9 +2,10 @@
 <!--@PawelPohl-->
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
     <title>Update reservation</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="tablestyle.css"/>
+    <link rel="stylesheet" href="formstyle.css"/>
 </head>
 <body>
 <nav>
@@ -16,7 +17,7 @@
         <li><a href="/repairs">Repairs</a></li>
     </ul>
 </nav>
-<div class="container">
+<div class="container" id="reservation">
     <h1>Update reservation</h1>
     <form action="/update_reservation" method="post">
 
@@ -38,10 +39,6 @@
                 <option value="Not Payed">Not Payed</option>
             </select>
         </article>
-
-        <!--<h2>Price</h2>
-        <p style="font-size: 0.6em">Won't be applied if there are changes to next sections</p>
-        <input th:value="${session.reservation.price}" name="price" />-->
 
         <h2>Pick-up</h2>
         <p>Distance</p>
