--- a/src/main/resources/static/tablestyle.css
+++ b/src/main/resources/static/tablestyle.css
@@ -9,8 +9,8 @@ body{
 }
 
 #reservations, #contract{
-    width: 80vw;
-    margin: 0 10vw;
+    min-width: 90vw;
+    margin: 0 5vw;
 }
 
 #contract h1, #contract h2 {
