--- a/src/main/resources/templates/reservations/cancel.html
+++ b/src/main/resources/templates/reservations/cancel.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Cancel Reservation</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="tablestyle.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
 </head>
 <body>
 <nav>
