--- a/src/main/resources/templates/reservations/update.html
+++ b/src/main/resources/templates/reservations/update.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Update reservation</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="formstyle.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
+    <link rel="stylesheet" href="tablestyle.css"/>
 </head>
 <body>
 <nav>
