--- a/src/main/resources/templates/reservations/details.html
+++ b/src/main/resources/templates/reservations/details.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Details</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="tablestyle.css"/>
+    <link rel="stylesheet" href="navbarstyle.css"/>
 </head>
 <body>
 <nav>
@@ -21,7 +22,7 @@
     <article>
     <h2>Motorhome:</h2>
     <p th:text="'ID: ' + ${motorhome.motorhomeId}">ID</p>
-    <p th:text="'License Plate: ' + ${motorhome.licencePlate}">License Plate</p>
+    <p th:text="'Licence Plate: ' + ${motorhome.licencePlate}">License Plate</p>
     <p th:text="'Brand: ' + ${motorhome.motorhomeDescription.brand}">Brand</p>
     <p th:text="'Model: ' + ${motorhome.motorhomeDescription.model}">Model</p>
     <p th:text="'Base Price: ' + ${motorhome.motorhomeDescription.basePrice}">Base Price</p>
@@ -31,7 +32,7 @@
     <h2>Customer</h2>
     <p th:text="'ID: ' + ${customer.customerId}"></p>
     <p th:text="'Name:  ' + ${customer.customerName}"></p>
-    <p th:text="'Driving license no: ' + ${customer.drivingLicenseNr}"></p>
+    <p th:text="'Driving licence no: ' + ${customer.drivingLicenceNr}"></p>
     </article>
 
     <article th:if="${reservation.hasPickUp}">
